complete_java_prep/module-projects/module-8-devops-and-platform-engineering-weeks-21-24/solution/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: module-platform-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: module.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: module7-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: module6-backend
                port:
                  number: 8080
